Bug 111717 - CJK text shift slight in vertical direction , underline cross out text
Summary: CJK text shift slight in vertical direction , underline cross out text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: CJK Vertical-Text
  Show dependency treegraph
 
Reported: 2017-08-12 09:53 UTC by kong
Modified: 2017-12-02 05:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
libreoffice_vertical_test.odt (11.48 KB, application/vnd.oasis.opendocument.text)
2017-08-12 09:53 UTC, kong
Details
libreoffice_norizontal_test.odt (10.68 KB, application/vnd.oasis.opendocument.text)
2017-08-12 09:54 UTC, kong
Details
Preview (41.11 KB, image/jpeg)
2017-08-12 09:57 UTC, kong
Details
Snapshot on Windows (128.24 KB, image/png)
2017-08-13 14:15 UTC, Volga
Details
Snapshot on Windows (2) (97.30 KB, image/png)
2017-11-23 12:06 UTC, Volga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kong 2017-08-12 09:53:43 UTC
Created attachment 135480 [details]
libreoffice_vertical_test.odt

Description: 
CJK text shift slight in vertical direction. when you style it to underline, it's crossing out text. 

Steps to Reproduce:
A. open attachment libreoffice_vertical_test.odt.
OR
B. 
  1) open attachment libreoffice_horizontal_test.odt.
  2) Format -> Page -> Text direction -> Right-to-left (vertical).

Actual Results:
underline cross out CJK text.

Expected Results:
underline should not cross out text like Latin text.

Reproducible: Always

System Info:
Version: 5.4.0.3
Build ID: 7556cbc6811c9d992f4064ab9287069087d7f62c
CPU threads: 2; OS: Linux 4.11; UI render: default; VCL: gtk2; 
Locale: zh-HK (en_GB.UTF-8); Calc: group
Comment 1 kong 2017-08-12 09:54:46 UTC
Created attachment 135481 [details]
libreoffice_norizontal_test.odt
Comment 2 kong 2017-08-12 09:57:22 UTC
Created attachment 135482 [details]
Preview
Comment 3 Volga 2017-08-13 14:15:20 UTC
Created attachment 135516 [details]
Snapshot on Windows

I cannot reproduce on Windows.
Comment 4 Xisco Faulí 2017-08-15 17:28:54 UTC
I can reproduce it in

Version: 6.0.0.0.alpha0+
Build ID: ef2e6260fad38e26c8591ea88ded348db618270d
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and back to

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

@Mark, one for you ?
Comment 5 Volga 2017-08-27 07:21:18 UTC
If we get support for 'base' table we will get better solution for this.
Comment 6 Commit Notification 2017-11-17 21:37:17 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=025b5f75c657ffd54f11209da9bc8a6ebdbcc81e

tdf#111717 consider CJK vertical writing for underline offset

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Volga 2017-11-23 12:06:06 UTC
Created attachment 137938 [details]
Snapshot on Windows (2)

Here is what I have seen after above commit. Reproduced in:

Version: 6.0.0.0.alpha1+ (x64)
Build ID: a0ebba3d8855fee0bcec04a10137ae3a4f9f0e77
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2017-11-22_05:59:17
Locale: zh-CN (zh_CN); Calc: group threaded
Comment 8 Mark Hung 2017-11-23 13:32:35 UTC
Hi Volga,

Your images shows that the underline no longer cross out the text. Is there any problem?
Comment 9 Volga 2017-11-24 02:17:35 UTC
(In reply to Mark Hung from comment #8)
> Hi Volga,
> 
> Your images shows that the underline no longer cross out the text. Is there
> any problem?

No, thanks. However another problem appearing to underline, see bug 114009.