tdf#111717 consider CJK vertical writing for underline offset

Textline offset was based on horizontal font metrics.
In vertical writing for CJK fonts, use descent
as its underline offset so that the line is drawn at the edge
of the bounding box to prevent overlap the CJK glyphs.

Change-Id: Iaa01bdf3cbb694dcf925975cde3f0f7ba7b97dac
Reviewed-on: https://gerrit.libreoffice.org/44720
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>